--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -16,6 +17,8 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.11",
+    "@tailwindcss/postcss": "^4.0.11",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.67.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
@@ -47,8 +50,9 @@
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^4.0.9",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.25.0",
     "vite": "^6.2.0",
