[NEW] adding internalization

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "semi": true,
   "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 100,
+  "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
@@ -13,5 +13,6 @@
   "plugins": [
     "prettier-plugin-tailwindcss"
   ],
-  "tailwindStylesheet": "./src/tailwind.css"
+  "singleAttributePerLine": true,
+  "experimentalTernaries": true
 }
