--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
+    "i18next": "^24.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "zustand": "^5.0.3"
   },
